--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
     "@vaadin/vaadin-rich-text-editor": "1.2.0",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "@vaadin/vaadin-avatar": "1.0.0-alpha6"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -104,7 +105,8 @@
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-rich-text-editor": "1.2.0",
-      "lit-element": "^2.2.1"
+      "lit-element": "^2.2.1",
+      "@vaadin/vaadin-avatar": "1.0.0-alpha6"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -118,6 +120,6 @@
       "webpack-dev-server": "3.10.3",
       "chokidar": "^3.4.0"
     },
-    "hash": "060c94e50483e8a97bbb5f44a42629944e70fe9120ca6c780ac4d98652365c93"
+    "hash": "95e5a064e3a8edc1ed4f4ef453c8f7a8905c630fd62bd8736af1cdc6bc8bf352"
   }
 }
