--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>collaboration-engine</artifactId>
-            <version>1.0.0.alpha8</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
