--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@vaadin/vaadin-material-styles": "1.3.2",
     "@vaadin/vaadin-rich-text-editor": "1.2.0",
     "lit-element": "^2.2.1",
-    "@vaadin/vaadin-avatar": "1.0.0-alpha6"
+    "@vaadin/vaadin-avatar": "1.0.0"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -106,7 +106,7 @@
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-rich-text-editor": "1.2.0",
       "lit-element": "^2.2.1",
-      "@vaadin/vaadin-avatar": "1.0.0-alpha6"
+      "@vaadin/vaadin-avatar": "1.0.0"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -120,6 +120,6 @@
       "webpack-dev-server": "3.10.3",
       "chokidar": "^3.4.0"
     },
-    "hash": "95e5a064e3a8edc1ed4f4ef453c8f7a8905c630fd62bd8736af1cdc6bc8bf352"
+    "hash": "40b1e05596458816471d2c47a5002aa0f1e05a39db6de1e4e8ebc6838708c311"
   }
 }
