Prototype of commenting

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,17 @@
             <artifactId>collaboration-engine</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>5.0.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
