--- a/package.json
+++ b/package.json
@@ -3,121 +3,161 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.3.1",
+      "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
-      "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "1.2.1",
-      "@vaadin/vaadin-grid": "5.6.6",
-      "@vaadin/vaadin-icons": "4.3.1",
-      "@vaadin/vaadin-split-layout": "4.2.0",
-      "@vaadin/vaadin-combo-box": "5.2.0",
-      "@vaadin/vaadin-cookie-consent": "1.1.2",
-      "@vaadin/vaadin-core-shrinkwrap": "14.3.1",
-      "@vaadin/vaadin-upload": "4.3.0",
-      "@vaadin/vaadin-dialog": "2.4.2",
-      "@vaadin/vaadin-select": "2.2.0",
-      "@vaadin/vaadin-app-layout": "2.1.0",
-      "@vaadin/vaadin-item": "2.2.0",
-      "@vaadin/vaadin-board": "2.1.1",
-      "@vaadin/vaadin-notification": "1.5.0",
-      "@vaadin/vaadin-charts": "6.3.0",
-      "@vaadin/vaadin-grid-pro": "2.1.1",
-      "@vaadin/vaadin-progress-bar": "1.2.0",
-      "@vaadin/vaadin-shrinkwrap": "14.3.1",
-      "@vaadin/vaadin-date-time-picker": "1.2.0",
-      "@vaadin/vaadin-ordered-layout": "1.3.0",
-      "@vaadin/vaadin-login": "1.1.0",
-      "@vaadin/vaadin-button": "2.3.0",
-      "@vaadin/vaadin-date-picker": "4.2.0",
-      "@vaadin/vaadin-text-field": "2.6.2",
-      "@vaadin/vaadin-menu-bar": "1.1.0",
-      "@vaadin/vaadin-custom-field": "1.1.0",
-      "@vaadin/vaadin-form-layout": "2.2.0",
-      "@vaadin/vaadin-confirm-dialog": "1.2.1",
-      "@vaadin/vaadin-accordion": "1.1.0",
+      "@vaadin/vaadin-crud": "2.0.0",
+      "@vaadin/vaadin-messages": "2.0.0-alpha1",
+      "@vaadin/vaadin-grid": "6.0.0",
+      "@vaadin/vaadin-icons": "4.3.2",
+      "@vaadin/vaadin-split-layout": "4.3.0",
+      "@vaadin/vaadin-combo-box": "6.0.0",
+      "@vaadin/vaadin-cookie-consent": "2.0.0",
+      "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha3",
+      "@vaadin/vaadin-upload": "5.0.0",
+      "@vaadin/vaadin-dialog": "2.5.2",
+      "@vaadin/vaadin-select": "3.0.0",
+      "@vaadin/vaadin-app-layout": "2.2.0",
+      "@vaadin/vaadin-item": "3.0.0",
+      "@vaadin/vaadin-board": "3.0.0",
+      "@vaadin/vaadin-charts": "8.0.1",
+      "@vaadin/vaadin-notification": "1.6.1",
+      "@vaadin/vaadin-grid-pro": "3.0.0",
+      "@vaadin/vaadin-progress-bar": "1.3.0",
+      "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha3",
+      "@vaadin/vaadin-date-time-picker": "2.0.0",
+      "@vaadin/vaadin-ordered-layout": "1.4.0",
+      "@vaadin/vaadin-login": "2.0.0",
+      "@vaadin/vaadin-button": "2.4.0",
+      "@vaadin/vaadin-date-picker": "5.0.0",
+      "@vaadin/vaadin-text-field": "3.0.1",
+      "@vaadin/vaadin-menu-bar": "2.0.0",
+      "@vaadin/vaadin-custom-field": "2.0.0",
+      "@vaadin/vaadin-form-layout": "2.3.0",
+      "@vaadin/vaadin-accordion": "1.2.0",
+      "@vaadin/vaadin-confirm-dialog": "2.0.0",
       "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-list-box": "1.3.0",
-      "@vaadin/vaadin-details": "1.1.0",
-      "@vaadin/vaadin-checkbox": "2.3.0",
+      "@vaadin/vaadin-list-box": "2.0.0",
+      "@vaadin/vaadin-details": "1.2.0",
+      "@vaadin/vaadin-checkbox": "3.0.0",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.2.0",
-      "@vaadin/vaadin-context-menu": "4.4.0",
-      "@vaadin/vaadin-avatar": "1.0.0",
-      "@vaadin/vaadin-tabs": "3.1.0",
-      "@vaadin/vaadin-radio-button": "1.3.0",
-      "@vaadin/vaadin-lumo-styles": "1.6.0",
+      "@vaadin/vaadin-time-picker": "3.0.0",
+      "@vaadin/vaadin-context-menu": "5.0.0",
+      "@vaadin/vaadin-avatar": "2.0.0",
+      "@vaadin/vaadin-radio-button": "1.5.1",
+      "@vaadin/vaadin-tabs": "4.0.0",
+      "@vaadin/vaadin-lumo-styles": "1.6.1",
       "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-rich-text-editor": "1.2.0"
+      "@vaadin/vaadin-rich-text-editor": "2.0.0"
     },
     "devDependencies": {
-      "webpack-babel-multi-target-plugin": "2.3.3",
-      "copy-webpack-plugin": "5.1.1",
-      "compression-webpack-plugin": "3.1.0",
-      "raw-loader": "3.1.0",
+      "css-loader": "4.2.1",
+      "file-loader": "6.2.0",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "glob": "7.1.6",
+      "validator": "13.1.17",
+      "style-loader": "2.0.0",
+      "lit-css-loader": "0.0.4",
+      "loader-utils": "2.0.0",
+      "@types/validator": "13.1.0",
+      "lit-element": "2.4.0",
+      "construct-style-sheets-polyfill": "2.4.16",
+      "webpack": "4.46.0",
+      "ts-loader": "8.0.12",
+      "chokidar": "^3.5.0",
+      "typescript": "4.1.5",
+      "webpack-dev-server": "3.11.0",
+      "workbox-webpack-plugin": "6.1.0",
+      "compression-webpack-plugin": "4.0.1",
       "webpack-cli": "3.3.11",
-      "webpack": "4.42.0",
-      "chokidar": "^3.4.0",
+      "idb": "5.0.6",
+      "lit-html": "1.3.0",
+      "workbox-core": "6.1.0",
+      "html-webpack-plugin": "4.5.1",
+      "workbox-precaching": "6.1.0",
+      "webpack-manifest-plugin": "3.0.0",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.10.3"
+      "extract-loader": "5.1.0"
     },
-    "hash": "2625a466297457a6fb883a57e2bc9b6823f0b3c1dfe0e35106cafb288a3e97fe"
+    "hash": "724c64d97ab4d180f05841ba6a88057b8b44e902ed24b040ee51f7f65c76bd94"
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
+    "lit-element": "2.3.1",
+    "@vaadin/router": "1.7.2",
     "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/vaadin-crud": "1.2.1",
-    "@vaadin/vaadin-grid": "5.6.6",
-    "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-split-layout": "4.2.0",
-    "@vaadin/vaadin-combo-box": "5.2.0",
-    "@vaadin/vaadin-cookie-consent": "1.1.2",
-    "@vaadin/vaadin-core-shrinkwrap": "14.3.1",
-    "@vaadin/vaadin-upload": "4.3.0",
-    "@vaadin/vaadin-dialog": "2.4.2",
-    "@vaadin/vaadin-select": "2.2.0",
-    "@vaadin/vaadin-app-layout": "2.1.0",
-    "@vaadin/vaadin-item": "2.2.0",
-    "@vaadin/vaadin-board": "2.1.1",
-    "@vaadin/vaadin-notification": "1.5.0",
-    "@vaadin/vaadin-charts": "6.3.0",
-    "@vaadin/vaadin-grid-pro": "2.1.1",
-    "@vaadin/vaadin-progress-bar": "1.2.0",
-    "@vaadin/vaadin-shrinkwrap": "14.3.1",
-    "@vaadin/vaadin-date-time-picker": "1.2.0",
-    "@vaadin/vaadin-ordered-layout": "1.3.0",
-    "@vaadin/vaadin-login": "1.1.0",
-    "@vaadin/vaadin-button": "2.3.0",
-    "@vaadin/vaadin-date-picker": "4.2.0",
-    "@vaadin/vaadin-text-field": "2.6.2",
-    "@vaadin/vaadin-menu-bar": "1.1.0",
-    "@vaadin/vaadin-custom-field": "1.1.0",
-    "@vaadin/vaadin-form-layout": "2.2.0",
-    "@vaadin/vaadin-confirm-dialog": "1.2.1",
-    "@vaadin/vaadin-accordion": "1.1.0",
+    "@vaadin/flow-frontend": "./target/flow-frontend",
+    "@vaadin/form": "./target/flow-frontend/form",
+    "@vaadin/vaadin-crud": "2.0.0",
+    "@vaadin/vaadin-messages": "2.0.0-alpha1",
+    "@vaadin/vaadin-grid": "6.0.0",
+    "@vaadin/vaadin-icons": "4.3.2",
+    "@vaadin/vaadin-split-layout": "4.3.0",
+    "@vaadin/vaadin-combo-box": "6.0.0",
+    "@vaadin/vaadin-cookie-consent": "2.0.0",
+    "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha3",
+    "@vaadin/vaadin-upload": "5.0.0",
+    "@vaadin/vaadin-dialog": "2.5.2",
+    "@vaadin/vaadin-select": "3.0.0",
+    "@vaadin/vaadin-app-layout": "2.2.0",
+    "@vaadin/vaadin-item": "3.0.0",
+    "@vaadin/vaadin-board": "3.0.0",
+    "@vaadin/vaadin-charts": "8.0.1",
+    "@vaadin/vaadin-notification": "1.6.1",
+    "@vaadin/vaadin-grid-pro": "3.0.0",
+    "@vaadin/vaadin-progress-bar": "1.3.0",
+    "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha3",
+    "@vaadin/vaadin-date-time-picker": "2.0.0",
+    "@vaadin/vaadin-ordered-layout": "1.4.0",
+    "@vaadin/vaadin-login": "2.0.0",
+    "@vaadin/vaadin-button": "2.4.0",
+    "@vaadin/vaadin-date-picker": "5.0.0",
+    "@vaadin/vaadin-text-field": "3.0.1",
+    "@vaadin/vaadin-menu-bar": "2.0.0",
+    "@vaadin/vaadin-custom-field": "2.0.0",
+    "@vaadin/vaadin-form-layout": "2.3.0",
+    "@vaadin/vaadin-accordion": "1.2.0",
+    "@vaadin/vaadin-confirm-dialog": "2.0.0",
     "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-list-box": "1.3.0",
-    "@vaadin/vaadin-details": "1.1.0",
-    "@vaadin/vaadin-checkbox": "2.3.0",
+    "@vaadin/vaadin-list-box": "2.0.0",
+    "@vaadin/vaadin-details": "1.2.0",
+    "@vaadin/vaadin-checkbox": "3.0.0",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.2.0",
-    "@vaadin/vaadin-context-menu": "4.4.0",
-    "@vaadin/vaadin-avatar": "1.0.0",
-    "@vaadin/vaadin-tabs": "3.1.0",
-    "@vaadin/vaadin-radio-button": "1.3.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-time-picker": "3.0.0",
+    "@vaadin/vaadin-context-menu": "5.0.0",
+    "@vaadin/vaadin-avatar": "2.0.0",
+    "@vaadin/vaadin-radio-button": "1.5.1",
+    "@vaadin/vaadin-tabs": "4.0.0",
+    "@vaadin/vaadin-lumo-styles": "1.6.1",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-rich-text-editor": "1.2.0"
+    "@vaadin/vaadin-rich-text-editor": "2.0.0"
   },
   "devDependencies": {
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.1",
-    "compression-webpack-plugin": "3.1.0",
-    "raw-loader": "3.1.0",
+    "css-loader": "4.2.1",
+    "file-loader": "6.2.0",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "glob": "7.1.6",
+    "validator": "13.1.17",
+    "style-loader": "2.0.0",
+    "lit-css-loader": "0.0.4",
+    "loader-utils": "2.0.0",
+    "@types/validator": "13.1.0",
+    "lit-element": "2.4.0",
+    "construct-style-sheets-polyfill": "2.4.16",
+    "webpack": "4.46.0",
+    "ts-loader": "8.0.12",
+    "chokidar": "^3.5.0",
+    "typescript": "4.1.5",
+    "webpack-dev-server": "3.11.0",
+    "workbox-webpack-plugin": "6.1.0",
+    "compression-webpack-plugin": "4.0.1",
     "webpack-cli": "3.3.11",
-    "webpack": "4.42.0",
-    "chokidar": "^3.4.0",
+    "idb": "5.0.6",
+    "lit-html": "1.3.0",
+    "workbox-core": "6.1.0",
+    "html-webpack-plugin": "4.5.1",
+    "workbox-precaching": "6.1.0",
+    "webpack-manifest-plugin": "3.0.0",
     "webpack-merge": "4.2.2",
-    "webpack-dev-server": "3.10.3"
+    "extract-loader": "5.1.0"
   }
 }
