Update Vaadin to 20.0.0.alpha4
At the same time, restructure pom.xml to match format of a fresh project from Vaadin.
pom was giving "missing dependencies" errors due to changes to project setup.

--- a/package.json
+++ b/package.json
@@ -6,49 +6,49 @@
       "lit-element": "2.3.1",
       "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-crud": "2.0.0",
-      "@vaadin/vaadin-messages": "2.0.0-alpha1",
-      "@vaadin/vaadin-grid": "6.0.0",
-      "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "6.0.0",
-      "@vaadin/vaadin-cookie-consent": "2.0.0",
-      "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha3",
-      "@vaadin/vaadin-upload": "5.0.0",
-      "@vaadin/vaadin-dialog": "2.5.2",
-      "@vaadin/vaadin-select": "3.0.0",
-      "@vaadin/vaadin-app-layout": "2.2.0",
-      "@vaadin/vaadin-item": "3.0.0",
-      "@vaadin/vaadin-board": "3.0.0",
-      "@vaadin/vaadin-charts": "8.0.1",
-      "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-grid-pro": "3.0.0",
-      "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha3",
-      "@vaadin/vaadin-date-time-picker": "2.0.0",
-      "@vaadin/vaadin-ordered-layout": "1.4.0",
-      "@vaadin/vaadin-login": "2.0.0",
-      "@vaadin/vaadin-button": "2.4.0",
-      "@vaadin/vaadin-date-picker": "5.0.0",
-      "@vaadin/vaadin-text-field": "3.0.1",
-      "@vaadin/vaadin-menu-bar": "2.0.0",
-      "@vaadin/vaadin-custom-field": "2.0.0",
-      "@vaadin/vaadin-form-layout": "2.3.0",
-      "@vaadin/vaadin-accordion": "1.2.0",
-      "@vaadin/vaadin-confirm-dialog": "2.0.0",
+      "@vaadin/vaadin-crud": "20.0.0-alpha1",
+      "@vaadin/vaadin-messages": "20.0.0-alpha1",
+      "@vaadin/vaadin-grid": "20.0.0-alpha1",
+      "@vaadin/vaadin-icons": "20.0.0-alpha1",
+      "@vaadin/vaadin-split-layout": "20.0.0-alpha1",
+      "@vaadin/vaadin-combo-box": "20.0.0-alpha1",
+      "@vaadin/vaadin-cookie-consent": "20.0.0-alpha1",
+      "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha4",
+      "@vaadin/vaadin-upload": "20.0.0-alpha1",
+      "@vaadin/vaadin-dialog": "20.0.0-alpha1",
+      "@vaadin/vaadin-select": "20.0.0-alpha1",
+      "@vaadin/vaadin-app-layout": "20.0.0-alpha1",
+      "@vaadin/vaadin-item": "20.0.0-alpha1",
+      "@vaadin/vaadin-board": "20.0.0-alpha1",
+      "@vaadin/vaadin-charts": "20.0.0-alpha1",
+      "@vaadin/vaadin-notification": "20.0.0-alpha1",
+      "@vaadin/vaadin-grid-pro": "20.0.0-alpha1",
+      "@vaadin/vaadin-progress-bar": "20.0.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha4",
+      "@vaadin/vaadin-date-time-picker": "20.0.0-alpha1",
+      "@vaadin/vaadin-ordered-layout": "20.0.0-alpha1",
+      "@vaadin/vaadin-login": "20.0.0-alpha1",
+      "@vaadin/vaadin-button": "20.0.0-alpha1",
+      "@vaadin/vaadin-date-picker": "20.0.0-alpha1",
+      "@vaadin/vaadin-text-field": "20.0.0-alpha1",
+      "@vaadin/vaadin-menu-bar": "20.0.0-alpha1",
+      "@vaadin/vaadin-custom-field": "20.0.0-alpha1",
+      "@vaadin/vaadin-form-layout": "20.0.0-alpha1",
+      "@vaadin/vaadin-accordion": "20.0.0-alpha1",
+      "@vaadin/vaadin-confirm-dialog": "20.0.0-alpha1",
       "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-list-box": "2.0.0",
-      "@vaadin/vaadin-details": "1.2.0",
-      "@vaadin/vaadin-checkbox": "3.0.0",
+      "@vaadin/vaadin-list-box": "20.0.0-alpha1",
+      "@vaadin/vaadin-details": "20.0.0-alpha1",
+      "@vaadin/vaadin-checkbox": "20.0.0-alpha1",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "3.0.0",
-      "@vaadin/vaadin-context-menu": "5.0.0",
-      "@vaadin/vaadin-avatar": "2.0.0",
-      "@vaadin/vaadin-radio-button": "1.5.1",
-      "@vaadin/vaadin-tabs": "4.0.0",
-      "@vaadin/vaadin-lumo-styles": "1.6.1",
-      "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-rich-text-editor": "2.0.0"
+      "@vaadin/vaadin-time-picker": "20.0.0-alpha1",
+      "@vaadin/vaadin-context-menu": "20.0.0-alpha1",
+      "@vaadin/vaadin-avatar": "20.0.0-alpha1",
+      "@vaadin/vaadin-radio-button": "20.0.0-alpha1",
+      "@vaadin/vaadin-tabs": "20.0.0-alpha1",
+      "@vaadin/vaadin-lumo-styles": "20.0.0-alpha1",
+      "@vaadin/vaadin-material-styles": "20.0.0-alpha1",
+      "@vaadin/vaadin-rich-text-editor": "20.0.0-alpha1"
     },
     "devDependencies": {
       "css-loader": "4.2.1",
@@ -56,7 +56,6 @@
       "extra-watch-webpack-plugin": "1.0.3",
       "glob": "7.1.6",
       "validator": "13.1.17",
-      "style-loader": "2.0.0",
       "lit-css-loader": "0.0.4",
       "loader-utils": "2.0.0",
       "@types/validator": "13.1.0",
@@ -79,7 +78,7 @@
       "webpack-merge": "4.2.2",
       "extract-loader": "5.1.0"
     },
-    "hash": "724c64d97ab4d180f05841ba6a88057b8b44e902ed24b040ee51f7f65c76bd94"
+    "hash": "be0244ae5cdd94eaa0f2eeb6f3fe4469257a692b6790fa05797e4e5c7b90f9d9"
   },
   "dependencies": {
     "lit-element": "2.3.1",
@@ -87,49 +86,49 @@
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-crud": "2.0.0",
-    "@vaadin/vaadin-messages": "2.0.0-alpha1",
-    "@vaadin/vaadin-grid": "6.0.0",
-    "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "6.0.0",
-    "@vaadin/vaadin-cookie-consent": "2.0.0",
-    "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha3",
-    "@vaadin/vaadin-upload": "5.0.0",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "3.0.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "3.0.0",
-    "@vaadin/vaadin-board": "3.0.0",
-    "@vaadin/vaadin-charts": "8.0.1",
-    "@vaadin/vaadin-notification": "1.6.1",
-    "@vaadin/vaadin-grid-pro": "3.0.0",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha3",
-    "@vaadin/vaadin-date-time-picker": "2.0.0",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "2.0.0",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "5.0.0",
-    "@vaadin/vaadin-text-field": "3.0.1",
-    "@vaadin/vaadin-menu-bar": "2.0.0",
-    "@vaadin/vaadin-custom-field": "2.0.0",
-    "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
-    "@vaadin/vaadin-confirm-dialog": "2.0.0",
+    "@vaadin/vaadin-crud": "20.0.0-alpha1",
+    "@vaadin/vaadin-messages": "20.0.0-alpha1",
+    "@vaadin/vaadin-grid": "20.0.0-alpha1",
+    "@vaadin/vaadin-icons": "20.0.0-alpha1",
+    "@vaadin/vaadin-split-layout": "20.0.0-alpha1",
+    "@vaadin/vaadin-combo-box": "20.0.0-alpha1",
+    "@vaadin/vaadin-cookie-consent": "20.0.0-alpha1",
+    "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha4",
+    "@vaadin/vaadin-upload": "20.0.0-alpha1",
+    "@vaadin/vaadin-dialog": "20.0.0-alpha1",
+    "@vaadin/vaadin-select": "20.0.0-alpha1",
+    "@vaadin/vaadin-app-layout": "20.0.0-alpha1",
+    "@vaadin/vaadin-item": "20.0.0-alpha1",
+    "@vaadin/vaadin-board": "20.0.0-alpha1",
+    "@vaadin/vaadin-charts": "20.0.0-alpha1",
+    "@vaadin/vaadin-notification": "20.0.0-alpha1",
+    "@vaadin/vaadin-grid-pro": "20.0.0-alpha1",
+    "@vaadin/vaadin-progress-bar": "20.0.0-alpha1",
+    "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha4",
+    "@vaadin/vaadin-date-time-picker": "20.0.0-alpha1",
+    "@vaadin/vaadin-ordered-layout": "20.0.0-alpha1",
+    "@vaadin/vaadin-login": "20.0.0-alpha1",
+    "@vaadin/vaadin-button": "20.0.0-alpha1",
+    "@vaadin/vaadin-date-picker": "20.0.0-alpha1",
+    "@vaadin/vaadin-text-field": "20.0.0-alpha1",
+    "@vaadin/vaadin-menu-bar": "20.0.0-alpha1",
+    "@vaadin/vaadin-custom-field": "20.0.0-alpha1",
+    "@vaadin/vaadin-form-layout": "20.0.0-alpha1",
+    "@vaadin/vaadin-accordion": "20.0.0-alpha1",
+    "@vaadin/vaadin-confirm-dialog": "20.0.0-alpha1",
     "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-list-box": "2.0.0",
-    "@vaadin/vaadin-details": "1.2.0",
-    "@vaadin/vaadin-checkbox": "3.0.0",
+    "@vaadin/vaadin-list-box": "20.0.0-alpha1",
+    "@vaadin/vaadin-details": "20.0.0-alpha1",
+    "@vaadin/vaadin-checkbox": "20.0.0-alpha1",
     "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "3.0.0",
-    "@vaadin/vaadin-context-menu": "5.0.0",
-    "@vaadin/vaadin-avatar": "2.0.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-tabs": "4.0.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.1",
-    "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-rich-text-editor": "2.0.0"
+    "@vaadin/vaadin-time-picker": "20.0.0-alpha1",
+    "@vaadin/vaadin-context-menu": "20.0.0-alpha1",
+    "@vaadin/vaadin-avatar": "20.0.0-alpha1",
+    "@vaadin/vaadin-radio-button": "20.0.0-alpha1",
+    "@vaadin/vaadin-tabs": "20.0.0-alpha1",
+    "@vaadin/vaadin-lumo-styles": "20.0.0-alpha1",
+    "@vaadin/vaadin-material-styles": "20.0.0-alpha1",
+    "@vaadin/vaadin-rich-text-editor": "20.0.0-alpha1"
   },
   "devDependencies": {
     "css-loader": "4.2.1",
@@ -137,7 +136,6 @@
     "extra-watch-webpack-plugin": "1.0.3",
     "glob": "7.1.6",
     "validator": "13.1.17",
-    "style-loader": "2.0.0",
     "lit-css-loader": "0.0.4",
     "loader-utils": "2.0.0",
     "@types/validator": "13.1.0",
