--- a/package.json
+++ b/package.json
@@ -1,161 +1,161 @@
 {
-  "name": "no-name",
-  "license": "UNLICENSED",
-  "vaadin": {
-    "dependencies": {
-      "lit-element": "2.3.1",
-      "@vaadin/router": "1.7.2",
-      "@polymer/polymer": "3.2.0",
-      "@vaadin/vaadin-crud": "20.0.0-alpha4",
-      "@vaadin/vaadin-messages": "20.0.0-alpha4",
-      "@vaadin/vaadin-grid": "20.0.0-alpha4",
-      "@vaadin/vaadin-icons": "20.0.0-alpha4",
-      "@vaadin/vaadin-split-layout": "20.0.0-alpha4",
-      "@vaadin/vaadin-combo-box": "20.0.0-alpha4",
-      "@vaadin/vaadin-cookie-consent": "20.0.0-alpha4",
-      "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha7",
-      "@vaadin/vaadin-upload": "20.0.0-alpha4",
-      "@vaadin/vaadin-dialog": "20.0.0-alpha4",
-      "@vaadin/vaadin-select": "20.0.0-alpha4",
-      "@vaadin/vaadin-app-layout": "20.0.0-alpha4",
-      "@vaadin/vaadin-item": "20.0.0-alpha4",
-      "@vaadin/vaadin-board": "20.0.0-alpha4",
-      "@vaadin/vaadin-charts": "20.0.0-alpha4",
-      "@vaadin/vaadin-notification": "20.0.0-alpha4",
-      "@vaadin/vaadin-grid-pro": "20.0.0-alpha4",
-      "@vaadin/vaadin-progress-bar": "20.0.0-alpha4",
-      "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha7",
-      "@vaadin/vaadin-date-time-picker": "20.0.0-alpha4",
-      "@vaadin/vaadin-ordered-layout": "20.0.0-alpha4",
-      "@vaadin/vaadin-login": "20.0.0-alpha4",
-      "@vaadin/vaadin-button": "20.0.0-alpha4",
-      "@vaadin/vaadin-date-picker": "20.0.0-alpha4",
-      "@vaadin/vaadin-text-field": "20.0.0-alpha4",
-      "@vaadin/vaadin-menu-bar": "20.0.0-alpha4",
-      "@vaadin/vaadin-custom-field": "20.0.0-alpha4",
-      "@vaadin/vaadin-form-layout": "20.0.0-alpha4",
-      "@vaadin/vaadin-accordion": "20.0.0-alpha4",
-      "@vaadin/vaadin-confirm-dialog": "20.0.0-alpha4",
-      "@polymer/iron-list": "3.1.0",
-      "@vaadin/vaadin-list-box": "20.0.0-alpha4",
-      "@vaadin/vaadin-details": "20.0.0-alpha4",
-      "@vaadin/vaadin-checkbox": "20.0.0-alpha4",
-      "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "20.0.0-alpha4",
-      "@vaadin/vaadin-context-menu": "20.0.0-alpha4",
-      "@vaadin/vaadin-avatar": "20.0.0-alpha4",
-      "@vaadin/vaadin-radio-button": "20.0.0-alpha4",
-      "@vaadin/vaadin-tabs": "20.0.0-alpha4",
-      "@vaadin/vaadin-lumo-styles": "20.0.0-alpha4",
-      "@vaadin/vaadin-material-styles": "20.0.0-alpha4",
-      "@vaadin/vaadin-rich-text-editor": "20.0.0-alpha4"
-    },
-    "devDependencies": {
-      "css-loader": "4.2.1",
-      "file-loader": "6.2.0",
-      "extra-watch-webpack-plugin": "1.0.3",
-      "glob": "7.1.6",
-      "validator": "13.1.17",
-      "lit-css-loader": "0.0.4",
-      "loader-utils": "2.0.0",
-      "@types/validator": "13.1.0",
-      "lit-element": "2.4.0",
-      "construct-style-sheets-polyfill": "2.4.16",
-      "webpack": "4.46.0",
-      "ts-loader": "8.0.12",
-      "chokidar": "^3.5.0",
-      "typescript": "4.2.3",
-      "webpack-dev-server": "3.11.0",
-      "workbox-webpack-plugin": "6.1.0",
-      "compression-webpack-plugin": "4.0.1",
-      "webpack-cli": "3.3.11",
-      "idb": "5.0.6",
-      "lit-html": "1.3.0",
-      "workbox-core": "6.1.0",
-      "html-webpack-plugin": "4.5.1",
-      "workbox-precaching": "6.1.0",
-      "webpack-manifest-plugin": "3.0.0",
-      "webpack-merge": "4.2.2",
-      "extract-loader": "5.1.0"
-    },
-    "hash": "476b7ca1e769dfa0fffc6cb6e8b3256a405df5290cd9f62af88e64d52938714c"
-  },
   "dependencies": {
-    "lit-element": "2.3.1",
-    "@vaadin/router": "1.7.2",
+    "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/vaadin-crud": "20.0.0-alpha4",
-    "@vaadin/vaadin-messages": "20.0.0-alpha4",
-    "@vaadin/vaadin-grid": "20.0.0-alpha4",
-    "@vaadin/vaadin-icons": "20.0.0-alpha4",
-    "@vaadin/vaadin-split-layout": "20.0.0-alpha4",
-    "@vaadin/vaadin-combo-box": "20.0.0-alpha4",
-    "@vaadin/vaadin-cookie-consent": "20.0.0-alpha4",
-    "@vaadin/vaadin-core-shrinkwrap": "20.0.0-alpha7",
-    "@vaadin/vaadin-upload": "20.0.0-alpha4",
-    "@vaadin/vaadin-dialog": "20.0.0-alpha4",
-    "@vaadin/vaadin-select": "20.0.0-alpha4",
-    "@vaadin/vaadin-app-layout": "20.0.0-alpha4",
-    "@vaadin/vaadin-item": "20.0.0-alpha4",
-    "@vaadin/vaadin-board": "20.0.0-alpha4",
-    "@vaadin/vaadin-charts": "20.0.0-alpha4",
-    "@vaadin/vaadin-notification": "20.0.0-alpha4",
-    "@vaadin/vaadin-grid-pro": "20.0.0-alpha4",
-    "@vaadin/vaadin-progress-bar": "20.0.0-alpha4",
-    "@vaadin/vaadin-shrinkwrap": "20.0.0-alpha7",
-    "@vaadin/vaadin-date-time-picker": "20.0.0-alpha4",
-    "@vaadin/vaadin-ordered-layout": "20.0.0-alpha4",
-    "@vaadin/vaadin-login": "20.0.0-alpha4",
-    "@vaadin/vaadin-button": "20.0.0-alpha4",
-    "@vaadin/vaadin-date-picker": "20.0.0-alpha4",
-    "@vaadin/vaadin-text-field": "20.0.0-alpha4",
-    "@vaadin/vaadin-menu-bar": "20.0.0-alpha4",
-    "@vaadin/vaadin-custom-field": "20.0.0-alpha4",
-    "@vaadin/vaadin-form-layout": "20.0.0-alpha4",
-    "@vaadin/vaadin-accordion": "20.0.0-alpha4",
-    "@vaadin/vaadin-confirm-dialog": "20.0.0-alpha4",
-    "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-list-box": "20.0.0-alpha4",
-    "@vaadin/vaadin-details": "20.0.0-alpha4",
-    "@vaadin/vaadin-checkbox": "20.0.0-alpha4",
-    "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "20.0.0-alpha4",
-    "@vaadin/vaadin-context-menu": "20.0.0-alpha4",
-    "@vaadin/vaadin-avatar": "20.0.0-alpha4",
-    "@vaadin/vaadin-radio-button": "20.0.0-alpha4",
-    "@vaadin/vaadin-tabs": "20.0.0-alpha4",
-    "@vaadin/vaadin-lumo-styles": "20.0.0-alpha4",
-    "@vaadin/vaadin-material-styles": "20.0.0-alpha4",
-    "@vaadin/vaadin-rich-text-editor": "20.0.0-alpha4"
+    "@vaadin/router": "1.7.2",
+    "@vaadin/vaadin-accordion": "21.0.0-alpha6",
+    "@vaadin/vaadin-app-layout": "21.0.0-alpha6",
+    "@vaadin/vaadin-avatar": "21.0.0-alpha6",
+    "@vaadin/vaadin-board": "21.0.0-alpha6",
+    "@vaadin/vaadin-button": "21.0.0-alpha6",
+    "@vaadin/vaadin-charts": "21.0.0-alpha6",
+    "@vaadin/vaadin-checkbox": "21.0.0-alpha6",
+    "@vaadin/vaadin-combo-box": "21.0.0-alpha6",
+    "@vaadin/vaadin-confirm-dialog": "21.0.0-alpha6",
+    "@vaadin/vaadin-context-menu": "21.0.0-alpha6",
+    "@vaadin/vaadin-cookie-consent": "21.0.0-alpha6",
+    "@vaadin/vaadin-crud": "21.0.0-alpha6",
+    "@vaadin/vaadin-custom-field": "21.0.0-alpha6",
+    "@vaadin/vaadin-date-picker": "21.0.0-alpha6",
+    "@vaadin/vaadin-date-time-picker": "21.0.0-alpha6",
+    "@vaadin/vaadin-details": "21.0.0-alpha6",
+    "@vaadin/vaadin-dialog": "21.0.0-alpha6",
+    "@vaadin/vaadin-form-layout": "21.0.0-alpha6",
+    "@vaadin/vaadin-grid": "21.0.0-alpha6",
+    "@vaadin/vaadin-grid-pro": "21.0.0-alpha6",
+    "@vaadin/vaadin-icons": "21.0.0-alpha6",
+    "@vaadin/vaadin-item": "21.0.0-alpha6",
+    "@vaadin/vaadin-list-box": "21.0.0-alpha6",
+    "@vaadin/vaadin-login": "21.0.0-alpha6",
+    "@vaadin/vaadin-lumo-styles": "21.0.0-alpha6",
+    "@vaadin/vaadin-material-styles": "21.0.0-alpha6",
+    "@vaadin/vaadin-menu-bar": "21.0.0-alpha6",
+    "@vaadin/vaadin-messages": "21.0.0-alpha6",
+    "@vaadin/vaadin-notification": "21.0.0-alpha6",
+    "@vaadin/vaadin-ordered-layout": "21.0.0-alpha6",
+    "@vaadin/vaadin-progress-bar": "21.0.0-alpha6",
+    "@vaadin/vaadin-radio-button": "21.0.0-alpha6",
+    "@vaadin/vaadin-rich-text-editor": "21.0.0-alpha6",
+    "@vaadin/vaadin-select": "21.0.0-alpha6",
+    "@vaadin/vaadin-split-layout": "21.0.0-alpha6",
+    "@vaadin/vaadin-tabs": "21.0.0-alpha6",
+    "@vaadin/vaadin-template-renderer": "21.0.0-alpha6",
+    "@vaadin/vaadin-text-field": "21.0.0-alpha6",
+    "@vaadin/vaadin-time-picker": "21.0.0-alpha6",
+    "@vaadin/vaadin-upload": "21.0.0-alpha6",
+    "@vaadin/vaadin-virtual-list": "21.0.0-alpha6",
+    "construct-style-sheets-polyfill": "2.4.16",
+    "lit": "2.0.0-rc.1"
   },
   "devDependencies": {
-    "css-loader": "4.2.1",
-    "file-loader": "6.2.0",
-    "extra-watch-webpack-plugin": "1.0.3",
-    "glob": "7.1.6",
-    "validator": "13.1.17",
-    "lit-css-loader": "0.0.4",
-    "loader-utils": "2.0.0",
     "@types/validator": "13.1.0",
-    "lit-element": "2.4.0",
-    "construct-style-sheets-polyfill": "2.4.16",
-    "webpack": "4.46.0",
-    "ts-loader": "8.0.12",
+    "@vaadin/application-theme-plugin": "./target/plugins/application-theme-plugin",
+    "@vaadin/stats-plugin": "./target/plugins/stats-plugin",
+    "@vaadin/theme-live-reload-plugin": "./target/plugins/theme-live-reload-plugin",
+    "@vaadin/theme-loader": "./target/plugins/theme-loader",
     "chokidar": "^3.5.0",
-    "typescript": "4.2.3",
-    "webpack-dev-server": "3.11.0",
-    "workbox-webpack-plugin": "6.1.0",
     "compression-webpack-plugin": "4.0.1",
-    "webpack-cli": "3.3.11",
-    "idb": "5.0.6",
-    "lit-html": "1.3.0",
-    "workbox-core": "6.1.0",
+    "css-loader": "4.2.1",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "extract-loader": "5.1.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.2.1",
+    "glob": "7.1.6",
     "html-webpack-plugin": "4.5.1",
-    "workbox-precaching": "6.1.0",
+    "lit-css-loader": "0.1.0",
+    "loader-utils": "2.0.0",
+    "ts-loader": "8.0.12",
+    "typescript": "4.2.3",
+    "validator": "13.1.17",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "3.0.0",
     "webpack-merge": "4.2.2",
-    "extract-loader": "5.1.0"
+    "workbox-core": "6.1.0",
+    "workbox-precaching": "6.1.0",
+    "workbox-webpack-plugin": "6.1.0"
+  },
+  "license": "UNLICENSED",
+  "name": "no-name",
+  "vaadin": {
+    "dependencies": {
+      "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-list": "3.1.0",
+      "@polymer/polymer": "3.2.0",
+      "@vaadin/router": "1.7.2",
+      "@vaadin/vaadin-accordion": "21.0.0-alpha6",
+      "@vaadin/vaadin-app-layout": "21.0.0-alpha6",
+      "@vaadin/vaadin-avatar": "21.0.0-alpha6",
+      "@vaadin/vaadin-board": "21.0.0-alpha6",
+      "@vaadin/vaadin-button": "21.0.0-alpha6",
+      "@vaadin/vaadin-charts": "21.0.0-alpha6",
+      "@vaadin/vaadin-checkbox": "21.0.0-alpha6",
+      "@vaadin/vaadin-combo-box": "21.0.0-alpha6",
+      "@vaadin/vaadin-confirm-dialog": "21.0.0-alpha6",
+      "@vaadin/vaadin-context-menu": "21.0.0-alpha6",
+      "@vaadin/vaadin-cookie-consent": "21.0.0-alpha6",
+      "@vaadin/vaadin-crud": "21.0.0-alpha6",
+      "@vaadin/vaadin-custom-field": "21.0.0-alpha6",
+      "@vaadin/vaadin-date-picker": "21.0.0-alpha6",
+      "@vaadin/vaadin-date-time-picker": "21.0.0-alpha6",
+      "@vaadin/vaadin-details": "21.0.0-alpha6",
+      "@vaadin/vaadin-dialog": "21.0.0-alpha6",
+      "@vaadin/vaadin-form-layout": "21.0.0-alpha6",
+      "@vaadin/vaadin-grid": "21.0.0-alpha6",
+      "@vaadin/vaadin-grid-pro": "21.0.0-alpha6",
+      "@vaadin/vaadin-icons": "21.0.0-alpha6",
+      "@vaadin/vaadin-item": "21.0.0-alpha6",
+      "@vaadin/vaadin-list-box": "21.0.0-alpha6",
+      "@vaadin/vaadin-login": "21.0.0-alpha6",
+      "@vaadin/vaadin-lumo-styles": "21.0.0-alpha6",
+      "@vaadin/vaadin-material-styles": "21.0.0-alpha6",
+      "@vaadin/vaadin-menu-bar": "21.0.0-alpha6",
+      "@vaadin/vaadin-messages": "21.0.0-alpha6",
+      "@vaadin/vaadin-notification": "21.0.0-alpha6",
+      "@vaadin/vaadin-ordered-layout": "21.0.0-alpha6",
+      "@vaadin/vaadin-progress-bar": "21.0.0-alpha6",
+      "@vaadin/vaadin-radio-button": "21.0.0-alpha6",
+      "@vaadin/vaadin-rich-text-editor": "21.0.0-alpha6",
+      "@vaadin/vaadin-select": "21.0.0-alpha6",
+      "@vaadin/vaadin-split-layout": "21.0.0-alpha6",
+      "@vaadin/vaadin-tabs": "21.0.0-alpha6",
+      "@vaadin/vaadin-template-renderer": "21.0.0-alpha6",
+      "@vaadin/vaadin-text-field": "21.0.0-alpha6",
+      "@vaadin/vaadin-time-picker": "21.0.0-alpha6",
+      "@vaadin/vaadin-upload": "21.0.0-alpha6",
+      "@vaadin/vaadin-virtual-list": "21.0.0-alpha6",
+      "construct-style-sheets-polyfill": "2.4.16",
+      "lit": "2.0.0-rc.1"
+    },
+    "devDependencies": {
+      "@types/validator": "13.1.0",
+      "chokidar": "^3.5.0",
+      "compression-webpack-plugin": "4.0.1",
+      "css-loader": "4.2.1",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "extract-loader": "5.1.0",
+      "file-loader": "6.2.0",
+      "fork-ts-checker-webpack-plugin": "6.2.1",
+      "glob": "7.1.6",
+      "html-webpack-plugin": "4.5.1",
+      "lit-css-loader": "0.1.0",
+      "loader-utils": "2.0.0",
+      "ts-loader": "8.0.12",
+      "typescript": "4.2.3",
+      "validator": "13.1.17",
+      "webpack": "4.46.0",
+      "webpack-cli": "3.3.11",
+      "webpack-dev-server": "3.11.0",
+      "webpack-manifest-plugin": "3.0.0",
+      "webpack-merge": "4.2.2",
+      "workbox-core": "6.1.0",
+      "workbox-precaching": "6.1.0",
+      "workbox-webpack-plugin": "6.1.0"
+    },
+    "hash": "7b5194573c0943a239eee62a506600c2c7d5b6b4ec31336a20388c1c286e4b8a"
   }
 }
