--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
         </project.reporting.outputEncoding>
-        <vaadin.version>21.0-SNAPSHOT</vaadin.version>
+        <vaadin.version>21.0.0.alpha6</vaadin.version>
     </properties>
 
     <parent>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>collaboration-engine</artifactId>
-            <version>3.2-SNAPSHOT</version>
+            <version>3.2.0.alpha2</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
