--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
+  "name": "no-name",
+  "license": "UNLICENSED",
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/router": "1.7.2",
-    "@vaadin/vaadin-accordion": "21.0.0-alpha6",
-    "@vaadin/vaadin-app-layout": "21.0.0-alpha6",
-    "@vaadin/vaadin-avatar": "21.0.0-alpha6",
-    "@vaadin/vaadin-board": "21.0.0-alpha6",
-    "@vaadin/vaadin-button": "21.0.0-alpha6",
-    "@vaadin/vaadin-charts": "21.0.0-alpha6",
-    "@vaadin/vaadin-checkbox": "21.0.0-alpha6",
-    "@vaadin/vaadin-combo-box": "21.0.0-alpha6",
-    "@vaadin/vaadin-confirm-dialog": "21.0.0-alpha6",
-    "@vaadin/vaadin-context-menu": "21.0.0-alpha6",
-    "@vaadin/vaadin-cookie-consent": "21.0.0-alpha6",
-    "@vaadin/vaadin-core-shrinkwrap": "21.0.0-alpha6",
-    "@vaadin/vaadin-crud": "21.0.0-alpha6",
-    "@vaadin/vaadin-custom-field": "21.0.0-alpha6",
-    "@vaadin/vaadin-date-picker": "21.0.0-alpha6",
-    "@vaadin/vaadin-date-time-picker": "21.0.0-alpha6",
-    "@vaadin/vaadin-details": "21.0.0-alpha6",
-    "@vaadin/vaadin-dialog": "21.0.0-alpha6",
-    "@vaadin/vaadin-form-layout": "21.0.0-alpha6",
-    "@vaadin/vaadin-grid": "21.0.0-alpha6",
-    "@vaadin/vaadin-grid-pro": "21.0.0-alpha6",
-    "@vaadin/vaadin-icon": "21.0.0-alpha6",
-    "@vaadin/vaadin-icons": "21.0.0-alpha6",
-    "@vaadin/vaadin-item": "21.0.0-alpha6",
-    "@vaadin/vaadin-list-box": "21.0.0-alpha6",
-    "@vaadin/vaadin-login": "21.0.0-alpha6",
-    "@vaadin/vaadin-lumo-styles": "21.0.0-alpha6",
-    "@vaadin/vaadin-material-styles": "21.0.0-alpha6",
-    "@vaadin/vaadin-menu-bar": "21.0.0-alpha6",
-    "@vaadin/vaadin-messages": "21.0.0-alpha6",
-    "@vaadin/vaadin-notification": "21.0.0-alpha6",
-    "@vaadin/vaadin-ordered-layout": "21.0.0-alpha6",
-    "@vaadin/vaadin-progress-bar": "21.0.0-alpha6",
-    "@vaadin/vaadin-radio-button": "21.0.0-alpha6",
-    "@vaadin/vaadin-rich-text-editor": "21.0.0-alpha6",
-    "@vaadin/vaadin-select": "21.0.0-alpha6",
-    "@vaadin/vaadin-shrinkwrap": "21.0.0-alpha6",
-    "@vaadin/vaadin-split-layout": "21.0.0-alpha6",
-    "@vaadin/vaadin-tabs": "21.0.0-alpha6",
-    "@vaadin/vaadin-template-renderer": "21.0.0-alpha6",
-    "@vaadin/vaadin-text-field": "21.0.0-alpha6",
-    "@vaadin/vaadin-time-picker": "21.0.0-alpha6",
-    "@vaadin/vaadin-upload": "21.0.0-alpha6",
-    "@vaadin/vaadin-virtual-list": "21.0.0-alpha6",
+    "@vaadin/router": "1.7.4",
+    "@vaadin/vaadin-accordion": "21.0.1",
+    "@vaadin/vaadin-app-layout": "21.0.1",
+    "@vaadin/vaadin-avatar": "21.0.1",
+    "@vaadin/vaadin-board": "21.0.1",
+    "@vaadin/vaadin-button": "21.0.1",
+    "@vaadin/vaadin-charts": "21.0.1",
+    "@vaadin/vaadin-checkbox": "21.0.1",
+    "@vaadin/vaadin-combo-box": "21.0.1",
+    "@vaadin/vaadin-confirm-dialog": "21.0.1",
+    "@vaadin/vaadin-context-menu": "21.0.1",
+    "@vaadin/vaadin-cookie-consent": "21.0.1",
+    "@vaadin/vaadin-core-shrinkwrap": "21.0.1",
+    "@vaadin/vaadin-crud": "21.0.1",
+    "@vaadin/vaadin-custom-field": "21.0.1",
+    "@vaadin/vaadin-date-picker": "21.0.1",
+    "@vaadin/vaadin-date-time-picker": "21.0.1",
+    "@vaadin/vaadin-details": "21.0.1",
+    "@vaadin/vaadin-dialog": "21.0.1",
+    "@vaadin/vaadin-form-layout": "21.0.1",
+    "@vaadin/vaadin-grid": "21.0.1",
+    "@vaadin/vaadin-grid-pro": "21.0.1",
+    "@vaadin/vaadin-icon": "21.0.1",
+    "@vaadin/vaadin-icons": "21.0.1",
+    "@vaadin/vaadin-item": "21.0.1",
+    "@vaadin/vaadin-list-box": "21.0.1",
+    "@vaadin/vaadin-login": "21.0.1",
+    "@vaadin/vaadin-lumo-styles": "21.0.1",
+    "@vaadin/vaadin-material-styles": "21.0.1",
+    "@vaadin/vaadin-menu-bar": "21.0.1",
+    "@vaadin/vaadin-messages": "21.0.1",
+    "@vaadin/vaadin-notification": "21.0.1",
+    "@vaadin/vaadin-ordered-layout": "21.0.1",
+    "@vaadin/vaadin-progress-bar": "21.0.1",
+    "@vaadin/vaadin-radio-button": "21.0.1",
+    "@vaadin/vaadin-rich-text-editor": "21.0.1",
+    "@vaadin/vaadin-select": "21.0.1",
+    "@vaadin/vaadin-shrinkwrap": "21.0.1",
+    "@vaadin/vaadin-split-layout": "21.0.1",
+    "@vaadin/vaadin-tabs": "21.0.1",
+    "@vaadin/vaadin-template-renderer": "21.0.1",
+    "@vaadin/vaadin-text-field": "21.0.1",
+    "@vaadin/vaadin-time-picker": "21.0.1",
+    "@vaadin/vaadin-upload": "21.0.1",
+    "@vaadin/vaadin-virtual-list": "21.0.1",
     "construct-style-sheets-polyfill": "2.4.16",
-    "lit": "2.0.0-rc.1"
+    "lit": "2.0.0-rc.4"
   },
   "devDependencies": {
     "@types/validator": "13.1.0",
@@ -71,71 +73,69 @@
     "lit-css-loader": "0.1.0",
     "loader-utils": "2.0.0",
     "ts-loader": "8.0.12",
-    "typescript": "4.2.3",
+    "typescript": "4.3.3",
     "validator": "13.1.17",
     "webpack": "4.46.0",
-    "webpack-cli": "3.3.11",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "3.0.0",
     "webpack-merge": "4.2.2",
-    "workbox-core": "6.1.0",
-    "workbox-precaching": "6.1.0",
-    "workbox-webpack-plugin": "6.1.0"
+    "workbox-core": "6.2.0",
+    "workbox-precaching": "6.2.0",
+    "workbox-webpack-plugin": "6.2.0"
   },
-  "license": "UNLICENSED",
-  "name": "no-name",
   "vaadin": {
     "dependencies": {
       "@polymer/iron-icon": "3.0.1",
       "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/router": "1.7.2",
-      "@vaadin/vaadin-accordion": "21.0.0-alpha6",
-      "@vaadin/vaadin-app-layout": "21.0.0-alpha6",
-      "@vaadin/vaadin-avatar": "21.0.0-alpha6",
-      "@vaadin/vaadin-board": "21.0.0-alpha6",
-      "@vaadin/vaadin-button": "21.0.0-alpha6",
-      "@vaadin/vaadin-charts": "21.0.0-alpha6",
-      "@vaadin/vaadin-checkbox": "21.0.0-alpha6",
-      "@vaadin/vaadin-combo-box": "21.0.0-alpha6",
-      "@vaadin/vaadin-confirm-dialog": "21.0.0-alpha6",
-      "@vaadin/vaadin-context-menu": "21.0.0-alpha6",
-      "@vaadin/vaadin-cookie-consent": "21.0.0-alpha6",
-      "@vaadin/vaadin-core-shrinkwrap": "21.0.0-alpha6",
-      "@vaadin/vaadin-crud": "21.0.0-alpha6",
-      "@vaadin/vaadin-custom-field": "21.0.0-alpha6",
-      "@vaadin/vaadin-date-picker": "21.0.0-alpha6",
-      "@vaadin/vaadin-date-time-picker": "21.0.0-alpha6",
-      "@vaadin/vaadin-details": "21.0.0-alpha6",
-      "@vaadin/vaadin-dialog": "21.0.0-alpha6",
-      "@vaadin/vaadin-form-layout": "21.0.0-alpha6",
-      "@vaadin/vaadin-grid": "21.0.0-alpha6",
-      "@vaadin/vaadin-grid-pro": "21.0.0-alpha6",
-      "@vaadin/vaadin-icon": "21.0.0-alpha6",
-      "@vaadin/vaadin-icons": "21.0.0-alpha6",
-      "@vaadin/vaadin-item": "21.0.0-alpha6",
-      "@vaadin/vaadin-list-box": "21.0.0-alpha6",
-      "@vaadin/vaadin-login": "21.0.0-alpha6",
-      "@vaadin/vaadin-lumo-styles": "21.0.0-alpha6",
-      "@vaadin/vaadin-material-styles": "21.0.0-alpha6",
-      "@vaadin/vaadin-menu-bar": "21.0.0-alpha6",
-      "@vaadin/vaadin-messages": "21.0.0-alpha6",
-      "@vaadin/vaadin-notification": "21.0.0-alpha6",
-      "@vaadin/vaadin-ordered-layout": "21.0.0-alpha6",
-      "@vaadin/vaadin-progress-bar": "21.0.0-alpha6",
-      "@vaadin/vaadin-radio-button": "21.0.0-alpha6",
-      "@vaadin/vaadin-rich-text-editor": "21.0.0-alpha6",
-      "@vaadin/vaadin-select": "21.0.0-alpha6",
-      "@vaadin/vaadin-shrinkwrap": "21.0.0-alpha6",
-      "@vaadin/vaadin-split-layout": "21.0.0-alpha6",
-      "@vaadin/vaadin-tabs": "21.0.0-alpha6",
-      "@vaadin/vaadin-template-renderer": "21.0.0-alpha6",
-      "@vaadin/vaadin-text-field": "21.0.0-alpha6",
-      "@vaadin/vaadin-time-picker": "21.0.0-alpha6",
-      "@vaadin/vaadin-upload": "21.0.0-alpha6",
-      "@vaadin/vaadin-virtual-list": "21.0.0-alpha6",
+      "@vaadin/router": "1.7.4",
+      "@vaadin/vaadin-accordion": "21.0.1",
+      "@vaadin/vaadin-app-layout": "21.0.1",
+      "@vaadin/vaadin-avatar": "21.0.1",
+      "@vaadin/vaadin-board": "21.0.1",
+      "@vaadin/vaadin-button": "21.0.1",
+      "@vaadin/vaadin-charts": "21.0.1",
+      "@vaadin/vaadin-checkbox": "21.0.1",
+      "@vaadin/vaadin-combo-box": "21.0.1",
+      "@vaadin/vaadin-confirm-dialog": "21.0.1",
+      "@vaadin/vaadin-context-menu": "21.0.1",
+      "@vaadin/vaadin-cookie-consent": "21.0.1",
+      "@vaadin/vaadin-core-shrinkwrap": "21.0.1",
+      "@vaadin/vaadin-crud": "21.0.1",
+      "@vaadin/vaadin-custom-field": "21.0.1",
+      "@vaadin/vaadin-date-picker": "21.0.1",
+      "@vaadin/vaadin-date-time-picker": "21.0.1",
+      "@vaadin/vaadin-details": "21.0.1",
+      "@vaadin/vaadin-dialog": "21.0.1",
+      "@vaadin/vaadin-form-layout": "21.0.1",
+      "@vaadin/vaadin-grid": "21.0.1",
+      "@vaadin/vaadin-grid-pro": "21.0.1",
+      "@vaadin/vaadin-icon": "21.0.1",
+      "@vaadin/vaadin-icons": "21.0.1",
+      "@vaadin/vaadin-item": "21.0.1",
+      "@vaadin/vaadin-list-box": "21.0.1",
+      "@vaadin/vaadin-login": "21.0.1",
+      "@vaadin/vaadin-lumo-styles": "21.0.1",
+      "@vaadin/vaadin-material-styles": "21.0.1",
+      "@vaadin/vaadin-menu-bar": "21.0.1",
+      "@vaadin/vaadin-messages": "21.0.1",
+      "@vaadin/vaadin-notification": "21.0.1",
+      "@vaadin/vaadin-ordered-layout": "21.0.1",
+      "@vaadin/vaadin-progress-bar": "21.0.1",
+      "@vaadin/vaadin-radio-button": "21.0.1",
+      "@vaadin/vaadin-rich-text-editor": "21.0.1",
+      "@vaadin/vaadin-select": "21.0.1",
+      "@vaadin/vaadin-shrinkwrap": "21.0.1",
+      "@vaadin/vaadin-split-layout": "21.0.1",
+      "@vaadin/vaadin-tabs": "21.0.1",
+      "@vaadin/vaadin-template-renderer": "21.0.1",
+      "@vaadin/vaadin-text-field": "21.0.1",
+      "@vaadin/vaadin-time-picker": "21.0.1",
+      "@vaadin/vaadin-upload": "21.0.1",
+      "@vaadin/vaadin-virtual-list": "21.0.1",
       "construct-style-sheets-polyfill": "2.4.16",
-      "lit": "2.0.0-rc.1"
+      "lit": "2.0.0-rc.4"
     },
     "devDependencies": {
       "@types/validator": "13.1.0",
@@ -151,17 +151,17 @@
       "lit-css-loader": "0.1.0",
       "loader-utils": "2.0.0",
       "ts-loader": "8.0.12",
-      "typescript": "4.2.3",
+      "typescript": "4.3.3",
       "validator": "13.1.17",
       "webpack": "4.46.0",
-      "webpack-cli": "3.3.11",
+      "webpack-cli": "3.3.12",
       "webpack-dev-server": "3.11.0",
       "webpack-manifest-plugin": "3.0.0",
       "webpack-merge": "4.2.2",
-      "workbox-core": "6.1.0",
-      "workbox-precaching": "6.1.0",
-      "workbox-webpack-plugin": "6.1.0"
+      "workbox-core": "6.2.0",
+      "workbox-precaching": "6.2.0",
+      "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "b968bed3c9e78120115655c67ca61b729e7a85656345fb16a9495f5ba6ba4852"
+    "hash": "ddcb06421c90c145e0234fb06e5059b29fea6cb553d8fbd4621e926992eb4598"
   }
 }
