--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
         </project.reporting.outputEncoding>
+        <!--
+        TODO collaboration-engine 3.2.1 contains the fix for a memory leak.
+        The overridden dependency can be fixed after updating to 21.0.2+
+        -->
         <vaadin.version>21.0.1</vaadin.version>
     </properties>
 
@@ -96,8 +100,8 @@
             <version>1.6.0</version>
         </dependency>
         <!--
-            TODO: 3.2.1 contains the fix for a memory leak.
-            This can be removed after updating to 21.0.2 -->
+            TODO: Remove this dependency.
+        -->
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>collaboration-engine</artifactId>
