--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         </project.reporting.outputEncoding>
         <!--
         TODO collaboration-engine 3.2.1 contains the fix for a memory leak.
-        The overridden dependency can be fixed after updating to 21.0.2+
+        The overridden dependency can be removed after updating to 21.0.2+
         -->
         <vaadin.version>21.0.1</vaadin.version>
     </properties>
