--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/bundles": "24.4.5",
+    "@vaadin/bundles": "24.5.0-alpha7",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/polymer-legacy-adapter": "24.4.5",
-    "@vaadin/react-components": "24.4.5",
-    "@vaadin/react-components-pro": "24.4.5",
+    "@vaadin/polymer-legacy-adapter": "24.5.0-alpha7",
+    "@vaadin/popover": "24.5.0-alpha7",
+    "@vaadin/react-components": "24.5.0-alpha7",
+    "@vaadin/react-components-pro": "24.5.0-alpha7",
     "@vaadin/router": "1.7.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.4.5",
-    "@vaadin/vaadin-material-styles": "24.4.5",
-    "@vaadin/vaadin-themable-mixin": "24.4.5",
+    "@vaadin/vaadin-lumo-styles": "24.5.0-alpha7",
+    "@vaadin/vaadin-material-styles": "24.5.0-alpha7",
+    "@vaadin/vaadin-themable-mixin": "24.5.0-alpha7",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -20,22 +21,23 @@
     "proj4": "2.11.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.23.1"
+    "react-router-dom": "6.24.0"
   },
   "devDependencies": {
     "@babel/preset-react": "7.24.7",
+    "@preact/signals-react-transform": "0.3.1",
     "@rollup/plugin-replace": "5.0.7",
     "@rollup/pluginutils": "5.1.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
     "async": "3.2.5",
-    "glob": "10.4.1",
+    "glob": "10.4.2",
     "rollup-plugin-brotli": "3.1.0",
     "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.4.5",
+    "typescript": "5.5.3",
     "vite": "5.3.3",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.1.1",
@@ -61,21 +63,23 @@
     "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
     "react-dom": "$react-dom",
     "react-router-dom": "$react-router-dom",
-    "react": "$react"
+    "react": "$react",
+    "@vaadin/popover": "$@vaadin/popover"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/bundles": "24.4.5",
+      "@vaadin/bundles": "24.5.0-alpha7",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/polymer-legacy-adapter": "24.4.5",
-      "@vaadin/react-components": "24.4.5",
-      "@vaadin/react-components-pro": "24.4.5",
+      "@vaadin/polymer-legacy-adapter": "24.5.0-alpha7",
+      "@vaadin/popover": "24.5.0-alpha7",
+      "@vaadin/react-components": "24.5.0-alpha7",
+      "@vaadin/react-components-pro": "24.5.0-alpha7",
       "@vaadin/router": "1.7.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.4.5",
-      "@vaadin/vaadin-material-styles": "24.4.5",
-      "@vaadin/vaadin-themable-mixin": "24.4.5",
+      "@vaadin/vaadin-lumo-styles": "24.5.0-alpha7",
+      "@vaadin/vaadin-material-styles": "24.5.0-alpha7",
+      "@vaadin/vaadin-themable-mixin": "24.5.0-alpha7",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
@@ -83,29 +87,30 @@
       "proj4": "2.11.0",
       "react": "18.3.1",
       "react-dom": "18.3.1",
-      "react-router-dom": "6.23.1"
+      "react-router-dom": "6.24.0"
     },
     "devDependencies": {
       "@babel/preset-react": "7.24.7",
+      "@preact/signals-react-transform": "0.3.1",
       "@rollup/plugin-replace": "5.0.7",
       "@rollup/pluginutils": "5.1.0",
       "@types/react": "18.3.3",
       "@types/react-dom": "18.3.0",
       "@vitejs/plugin-react": "4.3.1",
       "async": "3.2.5",
-      "glob": "10.4.1",
+      "glob": "10.4.2",
       "rollup-plugin-brotli": "3.1.0",
       "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.4.5",
+      "typescript": "5.5.3",
       "vite": "5.3.3",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.1.1",
       "workbox-core": "7.1.0",
       "workbox-precaching": "7.1.0"
     },
-    "hash": "f06d8005ffcc9d94c8e92e1b762dd0aac0e0103be3ed4f2479d1479a7d1846ec"
+    "hash": "6628eaef1f20228f13843af9d510609f78b3412b1c5225f608c6a7c646a43552"
   },
   "type": "module"
 }
